# dir-translation-py

./: .editorconfig  .gitignore  .pdm-python  README.md  exec.py  pyproject.toml
config/: __init__.py  test.toml
src/: concurrency.py  index.py  main.py
src/config/: __init__.py  index.toml
src/exception/: __init__.py  value.py
src/utils/: __init__.py  confLoader.py  helper.py  path.py
test/: exec.py
